--- a/dagger_hilt/app/build.gradle
+++ b/dagger_hilt/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -35,8 +36,11 @@ android {
 }
 
 dependencies {
-    implementation(":apple")
-    implementation(":banana")
+    // Modules
+    implementation project(path: ':apple')
+    implementation project(path: ':banana')
+    implementation project(path: ':core')
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -51,4 +55,14 @@ dependencies {
     // Dagger
     implementation "com.google.dagger:hilt-android:2.28-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
+
+    // Navigation
+    def nav_version = "2.3.0"
+    implementation "android.arch.navigation:navigation-runtime:$nav_version"
+    implementation "android.arch.navigation:navigation-runtime-ktx:$nav_version"
+    implementation "android.arch.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "android.arch.navigation:navigation-ui:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
 }
