--- a/dagger_hilt/app/build.gradle
+++ b/dagger_hilt/app/build.gradle
@@ -11,7 +11,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.example.daggerhilt"
+        applicationId "com.example.daggerhiltmultimodule"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
