--- a/dagger_hilt/settings.gradle
+++ b/dagger_hilt/settings.gradle
@@ -2,4 +2,4 @@ include ':core'
 include ':banana'
 include ':apple'
 include ':app'
-rootProject.name = "DaggerHilt"
+rootProject.name = "DaggerHiltMultiModule"
