--- a/dagger_hilt/app/build.gradle
+++ b/dagger_hilt/app/build.gradle
@@ -45,6 +45,14 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    // Dagger Hilt
     implementation "com.google.dagger:hilt-android:2.28-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
+
+    // Dagger Hilt - Lifecycle
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
+
+    // ViewModel KTX
+    implementation "androidx.activity:activity-ktx:1.1.0"
 }
