--- a/admob/app/src/main/AndroidManifest.xml
+++ b/admob/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".BannerActivity"/>
         <activity android:name=".InterstitialActivity"/>
         <activity android:name=".RewardActivity"/>
+        <activity android:name=".NativeAdActivity"/>
     </application>
 
 </manifest>
