--- a/glide/app/src/main/AndroidManifest.xml
+++ b/glide/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".DownSampleActivity"/>
+        <activity android:name=".PlaceholderActivity"/>
     </application>
 
 </manifest>
