--- a/dagger_hilt/app/build.gradle
+++ b/dagger_hilt/app/build.gradle
@@ -55,4 +55,8 @@ dependencies {
 
     // ViewModel KTX
     implementation "androidx.activity:activity-ktx:1.1.0"
+
+    // Assisted Inject
+    compileOnly 'com.squareup.inject:assisted-inject-annotations-dagger2:0.6.0'
+    kapt 'com.squareup.inject:assisted-inject-processor-dagger2:0.6.0'
 }
