--- a/dagger_hilt/app/build.gradle
+++ b/dagger_hilt/app/build.gradle
@@ -45,16 +45,22 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    // ViewModel KTX
+    implementation "androidx.activity:activity-ktx:1.1.0"
+
+    // WorkManager
+    implementation 'androidx.work:work-runtime-ktx:2.4.0'
+
     // Dagger Hilt
     implementation "com.google.dagger:hilt-android:2.28-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
-
-    // Dagger Hilt - Lifecycle
-    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
     kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
 
-    // ViewModel KTX
-    implementation "androidx.activity:activity-ktx:1.1.0"
+    // Dagger Hilt - View Model
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
+
+    // Dagger Hilt - Work Manager
+    implementation 'androidx.hilt:hilt-work:1.0.0-alpha02'
 
     // Assisted Inject
     compileOnly 'com.squareup.inject:assisted-inject-annotations-dagger2:0.6.0'
