feat: scheduled service
一定時間後にフルスクリーン画面を表示するサービスを作成した。

--- a/service/app/src/main/AndroidManifest.xml
+++ b/service/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
             android:showOnLockScreen="true" />
 
         <service android:name=".MainActivityService" />
+        <service android:name=".ScheduledService" />
         <service android:name=".FullScreenService" />
     </application>
 
