--- a/service/app/src/main/AndroidManifest.xml
+++ b/service/app/src/main/AndroidManifest.xml
@@ -4,8 +4,11 @@
 
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
+    <!--画面起動に必要-->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
         android:allowBackup="true"
@@ -24,10 +27,12 @@
         <activity
             android:name=".FullscreenActivity"
             android:launchMode="singleInstance"
-            android:showOnLockScreen="true" />
+            android:showOnLockScreen="true"
+            android:turnScreenOn="true" />
 
         <service android:name=".MainActivityService" />
         <service android:name=".ScheduledService" />
+        <service android:name=".ScheduledServicePerOneMin" />
         <service android:name=".FullScreenService" />
     </application>
 
